--- a/Project Modern C++/Twixt/Twixt/Twixt.ui
+++ b/Project Modern C++/Twixt/Twixt/Twixt.ui
@@ -17,13 +17,13 @@
    <enum>QTabWidget::Rounded</enum>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>60</y>
-      <width>77</width>
-      <height>86</height>
+      <x>110</x>
+      <y>30</y>
+      <width>291</width>
+      <height>221</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -68,5 +68,22 @@
  <resources>
   <include location="Twixt.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>pushButton</sender>
+   <signal>clicked()</signal>
+   <receiver>pushButton</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>236</x>
+     <y>127</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>236</x>
+     <y>128</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
